Fix Sidebar list alignment

--- a/pages/calculator.css
+++ b/pages/calculator.css
@@ -562,7 +562,7 @@ nav img:hover {
   }
 
   .nav-links ul li a {
-    margin-left: 1.37rem;
+    margin-left: 1.5rem;
   }
   .info__title {
     font-size: 1.2rem;
